--- a/proyecto-final-ecommerce-camilo-santiago-manzi-peluffo/CSS/styles.css
+++ b/proyecto-final-ecommerce-camilo-santiago-manzi-peluffo/CSS/styles.css
@@ -2,18 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family:'Courier New', Courier, monospace; */
-    /* color: #68A8FC; */
     text-decoration: none;
     color:#68A8FC;
 }
-
+.index {
+    text-align: center;
+}
 .text_Form{
     padding: 20px;
     text-align: center;
     font-size: 42px;
 }
-
 
 form{
     padding: 10px;
@@ -22,8 +21,6 @@ form{
     justify-content: center;
     text-align: center;
 }
-
-
 
 button {
     padding: 10px;
@@ -125,6 +122,9 @@ footer{
 
 @media only screen and (max-width: 768px) {
     
+    .index {
+        height: 90vh;
+    }
     .grid-container {
         grid-template-columns: 1fr;
     }
